# Realtime-Chat-App

./: README.md
src/: example.sqlite3  pyproject.toml
src/a_users/: apps.py  urls.py  views.py
src/a_users/templates/a_users/: profile.html  profile_edit.html
src/chat_site/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
src/chat_site/migrations/: 0001_initial.py  0002_chatgroup_users_online.py  0003_alter_chatgroup_group_name.py  0004_chatgroup_is_private_chatgroup_members_and_more.py  0005_chatgroup_admin_chatgroup_groupchat_name_and_more.py  0006_alter_chatgroup_group_name_userchannel.py  0007_groupmessage_file_alter_chatgroup_group_name_and_more.py
src/core/: asgi.py  settings.py  urls.py
src/templates/: base.html
src/templates/chat_site/: chat.html  chat_message.html  chatroom_delete.html  chatroom_edit.html  chatroom_leave.html
src/templates/chat_site/partials/: chat_message_p.html  message_content.html  online_count.html  online_status.html
src/templates/includes/: header.html
