[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels[daphne]>=4.2.0",
    "daphne>=4.1.2",
    "django>=5.1.7",
    "django-allauth[socialaccount]>=65.5.0",
    "django-cleanup>=9.0.0",
    "django-htmx>=1.23.0",
    "pillow>=11.1.0",
    "shortuuid>=1.0.13",
]
